--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 			}
 			.msgs-container{
 				height: 500px;
-				border: 1px solid black;
+				border: 1px solid blue;
 				overflow-y: auto;
 			}
 			.msg-input{
